--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,7 +109,6 @@ textarea {
 
 .form-body {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
@@ -125,6 +124,7 @@ textarea {
     width: 500px;
     background-color: white;
     padding: 25px 30px;
+    margin: 20px;
     border-radius: 2px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
